chaged name for <a> from main to index

--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
                 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto" id="nav-list">
-                        <li class="nav-item"><a class="nav-link" href="main.html">About me</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">About me</a></li>
                         <li class="nav-item"><a class="nav-link" href="programs.html">Programs</a></li>
                         <li class="nav-item"><a class="nav-link" href="students.html">Reviews</a></li>
                         <li class="nav-item"><a class="nav-link" href="form.html">Let's Go</a></li>
