--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 teaching experience, and my graduates include students of all ages and levels. I'm also happy to help
                 with your
                 request—please submit a request using the <a href="form.html" class="form">link</a> or message me on <a
-                    href="#" class="form">Telegram</a> If we already know each other, I would be glad to receive <a
+                    href="#" class="form">Telegram</a>. If we already know each other, I would be glad to receive <a
                     href="students.html#leave-review">your feedback</a>: satisfied
                 students are my main motivation.
             </p>
