math program changes'

--- a/programs.html
+++ b/programs.html
@@ -170,7 +170,7 @@
                     <td class="offline">Offline</td>
                 </tr>
                 <tr>
-                    <th rowspan="2">IELTS</th>
+                    <th rowspan="2">University</th>
                     <td class="online">400</td>
                     <td class="online">500</td>
                     <td class="online">700</td>
