--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
                 <div class="d-flex ms-3 ms-md-0">
                     <ul id="contacts" >
                         <li><a href="#"><img src="imgs_repsite/telegram.svg" id="contact-icon" alt="telegram"></a></li>
-                        <li><a href="#"><img src="imgs_repsite/skype.svg" id="contact-icon" alt="skype"></a></li>
+                        <li><a href="#"><img src="imgs_repsite/discord.svg" id="contact-icon" alt="discord"></a></li>
                         <li><a href="#"><img src="imgs_repsite/instagram.svg" id="contact-icon" alt="instagram"></a></li>
                         <li><a href="#"><img src="imgs_repsite/call.svg" id="contact-icon" alt="phone"></a></li>
                     </ul>
