--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto" id="nav-list">
-                        <li class="nav-item"><a class="nav-link" href="main.html">About me</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">About me</a></li>
                         <li class="nav-item"><a class="nav-link" href="programs.html">Programs</a></li>
                         <li class="nav-item"><a class="nav-link" href="students.html">Reviews</a></li>
                         <li class="nav-item"><a class="nav-link" href="form.html">Let's Go</a></li>
@@ -28,9 +28,8 @@
                 <div class="d-flex ms-3 ms-md-0">
                     <ul id="contacts">
                         <li><a href="#"><img src="imgs_repsite/telegram.svg" id="contact-icon" alt="telegram"></a></li>
-                        <li><a href="#"><img src="imgs_repsite/skype.svg" id="contact-icon" alt="skype"></a></li>
-                        <li><a href="#"><img src="imgs_repsite/instagram.svg" id="contact-icon" alt="instagram"></a>
-                        </li>
+                        <li><a href="#"><img src="imgs_repsite/discord.svg" id="contact-icon" alt="discord"></a></li>
+                        <li><a href="#"><img src="imgs_repsite/instagram.svg" id="contact-icon" alt="instagram"></a></li>
                         <li><a href="#"><img src="imgs_repsite/call.svg" id="contact-icon" alt="phone"></a></li>
                     </ul>
                 </div>
@@ -63,15 +62,15 @@
     <div id="education">
         <h1>Education</h1>
         <div class="educ-item">
-            <h3>2017-2021</h3>
-            <h4>South Ukrainian National Pedagogical University</h4>
-            <p>Teacher of foreign (English) language</p>
-        </div>
-        <img src="imgs_repsite/down.svg" class="next-educ" alt="Next education">
-        <div class="educ-item">
             <h3>2015-2019</h3>
             <h4>South Ukrainian National Pedagogical University</h4>
             <p>Mathematical teacher</p>
+        </div>
+        <img src="imgs_repsite/down.svg" class="next-educ" alt="Next education">
+        <div class="educ-item">
+            <h3>2017-2021</h3>
+            <h4>South Ukrainian National Pedagogical University</h4>
+            <p>Teacher of foreign (English) language</p>
         </div>
         <img src="imgs_repsite/down.svg" class="next-educ" alt="Next education">
         <div class="educ-item">
@@ -163,15 +162,15 @@
             </div>
             <div class="game2">
                 <img src="imgs_repsite/math-games.jpg" alt="Math game" class="game-img">
-                <p>Games for 5th-grade students with a <a href="https://www.matific.com/ua/uk/home/maths/grade-5/" alt="Math games" target="_blank">Math</a> focus</p>
+                <p>Site with different online games for 5th-grade students with a <a href="https://www.matific.com/ua/uk/home/maths/grade-5/" alt="Math games" target="_blank">Math</a> focus</p>
             </div>
             <div class="game3">
-                <img src="imgs_repsite/games-photo.jpg" alt="Games photo" class="game-img">
+                <img src="imgs_repsite/teacher.jpg" alt="Games photo" class="game-img">
                 <p>Games for the youngest students</p>
             </div>
             <div class="game4">
                 <img src="imgs_repsite/eng-game.jpg" alt="English language game" class="game-img">
-                <p>A mini-game I developed for children to learn <a href="#" alt="English games" target="_blank">English</a></p>
+                <p>Some mini-games and practice tasks I developed for children to learn <a href="#" alt="English games" target="_blank">English</a></p>
             </div>
             <div class="game5">
                 <img src="imgs_repsite/eng-games.jpg" alt="English language game" class="game-img">
