foter structure changed

--- a/form.html
+++ b/form.html
@@ -93,14 +93,26 @@
     </div>
 
     <footer id="footer-form">
-        <div id="footer-container">
-            <div id="online">
+        <div class="footer-container">
+            <a href="#">
+                <img src="imgs_repsite/telegram.svg" class="footer-icon" alt="telegram">
+            </a>
+            <a href="#">
+                <img src="imgs_repsite/discord.svg" class="footer-icon" alt="discord">
+            </a>
+            <a href="#">
+                <img src="imgs_repsite/instagram.svg" class="footer-icon" alt="instagram">
+            </a>
+            <a href="#">
+                <img src="imgs_repsite/call.svg" class="footer-icon" alt="phone">
+            </a>
+            <div class="contact-reveal" data-type="email">
                 <img src="imgs_repsite/online.svg" alt="online" class="footer-icon">
-                <p>Email: kath_tutor@gmail.com</p>
+                <span class="contact-text">Email: kath_tutor@gmail.com</span>
             </div>
-            <div id="offline">
+            <div class="contact-reveal" data-type="address">
                 <img src="imgs_repsite/offline.svg" alt="offline" class="footer-icon">
-                <p>Adress: Odessa, M.Zhukov St., 25</p>
+                <span class="contact-text">Adress: Odessa, M.Zhukov St., 25</span>
             </div>
         </div>
     </footer>
