--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
         <h1>Additional information</h1>
         <div id="info-grid">
             <div class="game1">
-                <img src="imgs_repsite/math-game.jpg" alt="Math game" class="game-img">
+                <img src="imgs_repsite/math-game1.jpg" alt="Math game" class="game-img">
                 <p>Online <a href="https://novatika.org/uk/5-klas/" alt="Math games" target="_blank">Math</a> tutorials for elementary and middle school students</p>
             </div>
             <div class="game2">
-                <img src="imgs_repsite/math-games.jpg" alt="Math game" class="game-img">
+                <img src="imgs_repsite/math-game2.jpg" alt="Math game" class="game-img">
                 <p>Site with different online games for 5th-grade students with a <a href="https://www.matific.com/ua/uk/home/maths/grade-5/" alt="Math games" target="_blank">Math</a> focus</p>
             </div>
             <div class="game3">
@@ -169,25 +169,37 @@
                 <p>Games for the youngest students</p>
             </div>
             <div class="game4">
-                <img src="imgs_repsite/eng-game.jpg" alt="English language game" class="game-img">
+                <img src="imgs_repsite/eng-game1.jpg" alt="English language game" class="game-img">
                 <p>Some mini-games and practice tasks I developed for children to learn <a href="#" alt="English games" target="_blank">English</a></p>
             </div>
             <div class="game5">
-                <img src="imgs_repsite/eng-games.jpg" alt="English language game" class="game-img">
+                <img src="imgs_repsite/eng-game2.jpg" alt="English language game" class="game-img">
                 <p>A set of various games for learning <a href="https://www.gamestolearnenglish.com/" alt="English games" target="_blank">English</a> for students in grades 5 and 6</p>
             </div>
         </div>
     </div>
 
     <footer>
-        <div id="footer-container">
-            <div id="online">
+        <div class="footer-container">
+            <a href="#">
+                <img src="imgs_repsite/telegram.svg" class="footer-icon" alt="telegram">
+            </a>
+            <a href="#">
+                <img src="imgs_repsite/discord.svg" class="footer-icon" alt="discord">
+            </a>
+            <a href="#">
+                <img src="imgs_repsite/instagram.svg" class="footer-icon" alt="instagram">
+            </a>
+            <a href="#">
+                <img src="imgs_repsite/call.svg" class="footer-icon" alt="phone">
+            </a>
+            <div class="contact-reveal" data-type="email">
                 <img src="imgs_repsite/online.svg" alt="online" class="footer-icon">
-                <p>Email: kath_tutor@gmail.com</p>
+                <span class="contact-text">Email: kath_tutor@gmail.com</span>
             </div>
-            <div id="offline">
+            <div class="contact-reveal" data-type="address">
                 <img src="imgs_repsite/offline.svg" alt="offline" class="footer-icon">
-                <p>Adress: Odessa, M.Zhukov St., 25</p>
+                <span class="contact-text">Adress: Odessa, M.Zhukov St., 25</span>
             </div>
         </div>
     </footer>
