--- a/programs.html
+++ b/programs.html
@@ -43,147 +43,152 @@
         </h3>
     </div>
 
-    <table>
-        <caption>English program</caption>
-        <thead>
-            <tr>
-                <th rowspan="2">Program</th>
-                <th colspan="3">Class time</th>
-                <th rowspan="2">Class type</th>                    
-            </tr>
-            <tr>
-                <th>45 min</th>
-                <th>60 min</th>
-                <th>90 min</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th rowspan="2">Beginner</th>
-                <td class="online">400</td>
-                <td class="online">550</td>
-                <td class="online">700</td>
-                <td class="online">Online</td>
-            </tr>
-            <tr>
-                <td class="offline">400</td>
-                <td class="offline">550</td>
-                <td class="offline">700</td>
-                <td class="offline">Offline</td>
-            </tr>
-            <tr>
-                <th rowspan="2">School</th>
-                <td class="online">400</td>
-                <td class="online">500</td>
-                <td class="online">700</td>
-                <td class="online">Online</td>
-            </tr>
-            <tr>
-                <td class="offline">450</td>
-                <td class="offline">550</td>
-                <td class="offline">750</td>
-                <td class="offline">Offline</td>
-            </tr>
-            <tr>
-                <th rowspan="2">Exam-ready</th>
-                <td class="online">500</td>
-                <td class="online">600</td>
-                <td class="online">750</td>
-                <td class="online">Online</td>
-            </tr>
-            <tr>
-                <td class="offline">480</td>
-                <td class="offline">580</td>
-                <td class="offline">780</td>
-                <td class="offline">Offline</td>
-            </tr>
-            <tr>
-                <th rowspan="2">IELTS</th>
-                <td class="online">600</td>
-                <td class="online">700</td>
-                <td class="online">900</td>
-                <td class="online">Online</td>
-            </tr>
-            <tr>
-                <td class="offline">650</td>
-                <td class="offline">750</td>
-                <td class="offline">950</td>
-                <td class="offline">Offline</td>
-            </tr>
-        </tbody>
-    </table>
-
+    <div class="eng-prog-table">
+        <div class="table-wrapper">
+            <table>
+                <caption>English program</caption>
+                <thead>
+                    <tr>
+                        <th rowspan="2">Program</th>
+                        <th colspan="3">Class time</th>
+                        <th rowspan="2">Class type</th>                    
+                    </tr>
+                    <tr>
+                        <th>45 min</th>
+                        <th>60 min</th>
+                        <th>90 min</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th rowspan="2">Beginner</th>
+                        <td class="online">400</td>
+                        <td class="online">550</td>
+                        <td class="online">700</td>
+                        <td class="online">Online</td>
+                    </tr>
+                    <tr>
+                        <td class="offline">400</td>
+                        <td class="offline">550</td>
+                        <td class="offline">700</td>
+                        <td class="offline">Offline</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="2">School</th>
+                        <td class="online">400</td>
+                        <td class="online">500</td>
+                        <td class="online">700</td>
+                        <td class="online">Online</td>
+                    </tr>
+                    <tr>
+                        <td class="offline">450</td>
+                        <td class="offline">550</td>
+                        <td class="offline">750</td>
+                        <td class="offline">Offline</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="2">Exam-ready</th>
+                        <td class="online">500</td>
+                        <td class="online">600</td>
+                        <td class="online">750</td>
+                        <td class="online">Online</td>
+                    </tr>
+                    <tr>
+                        <td class="offline">480</td>
+                        <td class="offline">580</td>
+                        <td class="offline">780</td>
+                        <td class="offline">Offline</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="2">IELTS</th>
+                        <td class="online">600</td>
+                        <td class="online">700</td>
+                        <td class="online">900</td>
+                        <td class="online">Online</td>
+                    </tr>
+                    <tr>
+                        <td class="offline">650</td>
+                        <td class="offline">750</td>
+                        <td class="offline">950</td>
+                        <td class="offline">Offline</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
     <div class="math-prog-table">
-        <table>
-            <caption>Math program</caption>
-            <thead>
-                <tr>
-                    <th rowspan="2">Program</th>
-                    <th colspan="3">Class time</th>
-                    <th rowspan="2">Class type</th>                    
-                </tr>
-                <tr>
-                    <th>45 min</th>
-                    <th>60 min</th>
-                    <th>90 min</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th rowspan="2">Beginner</th>
-                    <td class="online">400</td>
-                    <td class="online">500</td>
-                    <td class="online">700</td>
-                    <td class="online">Online</td>
-                </tr>
-                <tr>
-                    <td class="offline">450</td>
-                    <td class="offline">550</td>
-                    <td class="offline">750</td>
-                    <td class="offline">Offline</td>
-                </tr>
-                <tr>
-                    <th rowspan="2">School</th>
-                    <td class="online">450</td>
-                    <td class="online">550</td>
-                    <td class="online">750</td>
-                    <td class="online">Online</td>
-                </tr>
-                <tr>
-                    <td class="offline">480</td>
-                    <td class="offline">580</td>
-                    <td class="offline">780</td>
-                    <td class="offline">Offline</td>
-                </tr>
-                <tr>
-                    <th rowspan="2">Exam-ready</th>
-                    <td class="online">500</td>
-                    <td class="online">600</td>
-                    <td class="online">800</td>
-                    <td class="online">Online</td>
-                </tr>
-                <tr>
-                    <td class="offline">500</td>
-                    <td class="offline">600</td>
-                    <td class="offline">800</td>
-                    <td class="offline">Offline</td>
-                </tr>
-                <tr>
-                    <th rowspan="2">University</th>
-                    <td class="online">500</td>
-                    <td class="online">580</td>
-                    <td class="online">600</td>
-                    <td class="online">Online</td>
-                </tr>
-                <tr>
-                    <td class="offline">530</td>
-                    <td class="offline">600</td>
-                    <td class="offline">650</td>
-                    <td class="offline">Offline</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="table-wrapper">
+            <table>
+                <caption>Math program</caption>
+                <thead>
+                    <tr>
+                        <th rowspan="2">Program</th>
+                        <th colspan="3">Class time</th>
+                        <th rowspan="2">Class type</th>                    
+                    </tr>
+                    <tr>
+                        <th>45 min</th>
+                        <th>60 min</th>
+                        <th>90 min</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th rowspan="2">Beginner</th>
+                        <td class="online">400</td>
+                        <td class="online">500</td>
+                        <td class="online">700</td>
+                        <td class="online">Online</td>
+                    </tr>
+                    <tr>
+                        <td class="offline">450</td>
+                        <td class="offline">550</td>
+                        <td class="offline">750</td>
+                        <td class="offline">Offline</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="2">School</th>
+                        <td class="online">450</td>
+                        <td class="online">550</td>
+                        <td class="online">750</td>
+                        <td class="online">Online</td>
+                    </tr>
+                    <tr>
+                        <td class="offline">480</td>
+                        <td class="offline">580</td>
+                        <td class="offline">780</td>
+                        <td class="offline">Offline</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="2">Exam-ready</th>
+                        <td class="online">500</td>
+                        <td class="online">600</td>
+                        <td class="online">800</td>
+                        <td class="online">Online</td>
+                    </tr>
+                    <tr>
+                        <td class="offline">500</td>
+                        <td class="offline">600</td>
+                        <td class="offline">800</td>
+                        <td class="offline">Offline</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="2">University</th>
+                        <td class="online">500</td>
+                        <td class="online">580</td>
+                        <td class="online">600</td>
+                        <td class="online">Online</td>
+                    </tr>
+                    <tr>
+                        <td class="offline">530</td>
+                        <td class="offline">600</td>
+                        <td class="offline">650</td>
+                        <td class="offline">Offline</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <div class="form-btn">
@@ -191,14 +196,26 @@
     </div>
 
     <footer>
-        <div id="footer-container">
-            <div id="online">
+        <div class="footer-container">
+            <a href="#">
+                <img src="imgs_repsite/telegram.svg" class="footer-icon" alt="telegram">
+            </a>
+            <a href="#">
+                <img src="imgs_repsite/discord.svg" class="footer-icon" alt="discord">
+            </a>
+            <a href="#">
+                <img src="imgs_repsite/instagram.svg" class="footer-icon" alt="instagram">
+            </a>
+            <a href="#">
+                <img src="imgs_repsite/call.svg" class="footer-icon" alt="phone">
+            </a>
+            <div class="contact-reveal" data-type="email">
                 <img src="imgs_repsite/online.svg" alt="online" class="footer-icon">
-                <p>Email: kath_tutor@gmail.com</p>
+                <span class="contact-text">Email: kath_tutor@gmail.com</span>
             </div>
-            <div id="offline">
+            <div class="contact-reveal" data-type="address">
                 <img src="imgs_repsite/offline.svg" alt="offline" class="footer-icon">
-                <p>Adress: Odessa, M.Zhukov St., 25</p>
+                <span class="contact-text">Adress: Odessa, M.Zhukov St., 25</span>
             </div>
         </div>
     </footer>
