structure changes and link added

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
             <div class="game4">
                 <img src="imgs_repsite/eng-game1.jpg" alt="English language game" class="game-img">
-                <p>Some mini-games and practice tasks I developed for children to learn <a href="#" alt="English games" target="_blank">English</a></p>
+                <p>Some mini-games and practice tasks I developed for children to learn <a href="https://kirahiiy55-tech.github.io/Tutor-learning-site/" alt="English games" target="_blank">English</a></p>
             </div>
             <div class="game5">
                 <img src="imgs_repsite/eng-game2.jpg" alt="English language game" class="game-img">
