--- a/form.html
+++ b/form.html
@@ -43,7 +43,7 @@
             <h1>Let`s start classes!</h1>
             <p>Here you can leave your contacts and choose program that you want to study</p>
         </div>
-        <div>
+        <div id="form-block">
             <div class="sign-container">
                 <form action="https://formsubmit.co/kirahi.iy55@gmail.com" method="POST" class="sign-form">
                     <input type="hidden" name="_subject" value="New application!">
