--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="icon" type="image/x-icon" href="imgs_repsite/favicon.ico">
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/repsite.css" rel="stylesheet">
 
