--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutor site (Yakimova)</title>
 
+    <link rel="icon" type="image/x-icon" href="imgs_repsite/favicon.ico">
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/repsite.css" rel="stylesheet">
 
